Switch Font to Typekit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   </style>
   <link rel="stylesheet" href="css/map.css">
   <script src="js/libs/modernizr-2.5.0.min.js"></script>
-  <script type="text/javascript" src="http://fast.fonts.com/jsapi/e0c9f521-fcd0-4ed8-8fcd-97ff65bdd2bb.js"></script>
+<script type="text/javascript" src="//use.typekit.net/vrj3tpd.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 </head>
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -40,7 +42,7 @@
     <div id="map">
       <canvas id="RFIDMap"></canvas>
       <div class="totalTouchPoints">
-        <h1>ITN TOUCH TO DATE</h1>
+        <h1>ITN TOUCHES TO DATE</h1>
         <p>021,098,096</p>
       </div>
       <div id="mapControls">
