Copy Changes, Letter Spacing

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="map">
       <canvas id="RFIDMap"></canvas>
       <div class="totalTouchPoints">
-        <h1>ITN TOUCHES TO DATE</h1>
+        <h1>TOUCHES TO DATE</h1>
         <p></p>
       </div>
       <div id="mapControls">
